# otp-jhogberg

./: Makefile.in  benchmark_basic_msg.erl  benchmark_basic_new.erl  benchmark_bif_ioq.erl  benchmark_nif.c  benchmark_nif_ioq.c  benchmark_nif_ioq.erl  benchmark_nif_ioq_0130.erl  make-here.sh  perf.erl  struct_prototype.erl  t.erl
erts/: configure.in
erts/doc/src/: erts_alloc.xml
erts/emulator/: Makefile.in  asmjit.version
erts/emulator/asmjit/: core.h
erts/emulator/beam/: atom.names  beam_bif_load.c  beam_bp.c  beam_common.c  beam_emu.c  bif.c  bif.tab  big.c  break.c  code_ix.c  copy.c  erl_alloc.c  erl_alloc.h  erl_alloc.types  erl_alloc_util.c  erl_alloc_util.h  erl_bif_info.c  erl_bif_lists.c  erl_bif_op.c  erl_bits.c  erl_bits_f16.h  erl_debug.c  erl_fun.c  erl_fun.h  erl_gc.c  erl_init.c  erl_io_queue.c  erl_io_queue.h  erl_iolist.c  erl_lock_check.c  erl_nfunc_sched.h  erl_nif.c  erl_printf_term.c  erl_process.c  erl_process.h  erl_struct.c  erl_struct.h  erl_term.c  erl_term.h  erl_term_hashing.c  (+6 more)
erts/emulator/test/: Makefile  bs_utf_SUITE.erl  process_SUITE.erl  receive_SUITE.erl  scheduler_SUITE.erl
erts/etc/common/: erlexec.c
erts/lib_src/: Makefile.in
erts/preloaded/ebin/: atomics.beam  counters.beam  erl_init.beam  erl_prim_loader.beam  erl_tracer.beam  erlang.beam  erts_code_purger.beam  erts_dirty_process_signal_handler.beam  erts_internal.beam  erts_literal_area_collector.beam  init.beam  persistent_term.beam  prim_buffer.beam  prim_file.beam  prim_inet.beam  prim_net.beam  prim_socket.beam  prim_zip.beam  socket_registry.beam  zlib.beam
erts/preloaded/src/: erlang.erl  erts_internal.erl
lib/: Makefile
lib/asn1/c_src/: Makefile
lib/compiler/src/: Makefile  beam_call_types.erl  beam_core_to_ssa.erl  beam_disasm.erl  beam_ssa.erl  beam_ssa_codegen.erl  beam_ssa_opt.erl  (+14 more)
lib/crypto/: configure
lib/erl_interface/: configure
lib/smt/: Makefile  configure  configure.ac  info  vsn.mk
lib/smt/c_src/: Makefile.in  z3_nif.cpp
lib/smt/src/: Makefile  smt.app.src  smt.appup.src  smt.erl  smt_test.erl  smtlib2_parser.yrl  smtlib2_scanner.xrl  z3_nif.erl
make/: configure  otp.mk.in  output.mk.in
make/autoconf/: otp.m4
system/: COPYRIGHT
(+312 files in other folders)
